<resources>
    <string name="app_name">New Trivia Game</string>
    <string name="pelaa_button_text">PELAA</string>
    <string name="kysymykset_text">Kysymykset:</string>
    <string name="aika_text">Aika:</string>
    <string name="pisteet_text">Pisteet:</string>
    <string name="kysymykset_value">0 of 0</string>
    <string name="aika_value">0:00</string>
    <string name="pisteet_value">0</string>
    <string name="kys_value">0</string>
    <string name="tekstit_text">teksti</string>
    <string name="true_button_text">TRUE</string>
    <string name="false_button_text">FALSE</string>
    <string name="next_button_text">NEXT</string>
    <string name="start_button_text">START</string>
</resources>