<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Pelialue">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/bonbon"
            android:text="@string/kysymykset_text"
            android:textColor="#2196F3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="186dp"
            android:layout_height="42dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bonbon"
            android:text="@string/aika_text"
            android:textColor="#0097FB"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="176dp"
            android:layout_height="42dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bonbon"
            android:text="@string/pisteet_text"
            android:textColor="#0098FF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/kortti"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.04" />

        <TextView
            android:id="@+id/aikaValue"
            android:layout_width="90dp"
            android:layout_height="41dp"
            android:layout_marginTop="20dp"
            android:text="@string/aika_value"
            android:textColor="#F44336"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/pisteValue"
            android:layout_width="87dp"
            android:layout_height="39dp"
            android:text="@string/pisteet_value"
            android:textColor="#009688"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/kortti"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aikaValue"
            app:layout_constraintVertical_bias="0.127" />

        <androidx.cardview.widget.CardView
            android:id="@+id/kortti"
            android:layout_width="350dp"
            android:layout_height="153dp"
            android:layout_marginTop="176dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.59"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="326dp"
                android:layout_height="132dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/tekstit_text"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="77dp"
            android:layout_height="38dp"
            android:layout_marginTop="4dp"
            android:text="@string/kys_value"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonTrue"
            android:layout_width="301dp"
            android:layout_height="53dp"
            android:layout_marginTop="32dp"
            android:text="@string/true_button_text"
            android:textColor="#0099FF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kortti"
            app:strokeColor="#4CAF50"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/buttonFalse"
            android:layout_width="302dp"
            android:layout_height="52dp"
            android:text="@string/false_button_text"
            android:textColor="#009AFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTrue"
            app:layout_constraintVertical_bias="0.09"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>